--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.1.1",
 		"@react-native-async-storage/async-storage": "1.23.1",
+		"@react-native-community/datetimepicker": "8.0.1",
 		"@supabase/supabase-js": "^2.45.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
-		"expo": "~51.0.35",
+		"expo": "~51.0.36",
 		"expo-constants": "~16.0.2",
 		"expo-image": "~1.13.0",
 		"expo-linking": "~6.3.1",
