--- a/app.json
+++ b/app.json
@@ -42,6 +42,13 @@
 		"experiments": {
 			"typedRoutes": true
 		},
-		"plugins": ["expo-router", "expo-secure-store"]
+		"plugins": [
+			"expo-router",
+			"expo-secure-store",
+			"expo-location",
+			{
+				"locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+			}
+		]
 	}
 }
