--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"expo-constants": "~16.0.2",
 		"expo-image": "~1.13.0",
 		"expo-linking": "~6.3.1",
+		"expo-location": "~17.0.1",
 		"expo-router": "^3.5.23",
 		"expo-secure-store": "~13.0.2",
 		"expo-status-bar": "~1.12.1",
@@ -30,6 +31,7 @@
 		"react-hook-form": "^7.45.0",
 		"react-native": "0.74.5",
 		"react-native-gesture-handler": "~2.16.1",
+		"react-native-maps": "1.14.0",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
